--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,4 +12,5 @@ jobs:
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: 'Testando Calculadora'
         uses: actions/checkout@v3
-      - run: python3 -m pytest test_calculadora.py
+      - run: pip install pytest
+      - run: pytest test_calculator.py
