--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,4 +13,4 @@ jobs:
       - name: 'Testando Calculadora'
         uses: actions/checkout@v3
       - run: pip install pytest
-      - run: python3 -m pytest test_calculadora.py
+      - run: pytest
