--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       - name: 'Instalar dependências'
         run: |
-          if [ "${{ matrix.os }}" == "macos-latest" ]; then
+          if ( "${{ matrix.os }}" == "macos-latest" ); then
             python3 -m pip install pytest
           else
             pip install pytest
